--- a/ParadiseFarmGame/nbproject/project.properties
+++ b/ParadiseFarmGame/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Page.MainController
+main.class=Main.GameController
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
